--- a/style.css
+++ b/style.css
@@ -45,7 +45,4 @@
 .secondh {line-height: 150px;}
 .reading {   width: 560px;
     height: fit-content;
-    border-radius: 12px;
-  margin-left:140px; display: flex;flex-direction: row;}
-  .averageimg { max-width:100% ;}
-      
+    border-radius: 12px;}
