--- a/style.css
+++ b/style.css
@@ -3,15 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-<<<<<<< HEAD
-
-.sectionone{display: flex;row}
-.contain {margin: 150px; margin: right 0%;}
-
-.h1{font-family: Martian Mono;
-      font-size: 62px;
-      
-=======
 .sectionone {
   display: flex;
   flex-direction: row;
@@ -25,71 +16,78 @@
 }
 .firstlogo {
   margin: 20px;
->>>>>>> 735977c44e0ad36fe2aaa0302bc39c0773c36b06
 }
-.paragraphone {margin: 20px;margin-bottom: 20px;}
+.paragraphone {
+  margin: 20px;
+  margin-bottom: 20px;
+}
 
-<<<<<<< HEAD
-.buttonlight{margin-top:10px;margin-bottom: 10px;
-      min-height: 64px;
-    border: 2px #062630 solid;
-    border-radius: 8px;
-    margin: 0;
-    padding: 0;
-    color: #062630;
-    font-family: Martian Mono;
-    font-size: 18px;
-    font-weight: 600;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    padding-inline: 24px; letter-spacing: -1px;
-    line-height: 130%;
-    justify-content: center;
-    gap: 20px;
-
-}
-.avatar {width: 110px;
-    height: 40px; margin-top: 20px;
-}
-.ulstar {display: flex;list-style-type: none;}
-.hero{width: 536px;border-radius: 10px; margin-left:30%;margin-top: 15%;gap: 80px;margin-right: 0px;}
-.sectionsecond { display: flex;flex-direction: row; }
-.secondpage {display: flex;flex-direction: column;
-   gap: 30px; margin: 50px;text-align: left;margin-left: 10%;list-style-type:none;font-size:30px; line-height: 30px;}
-.logo {margin-top: -40px;margin-left:0px ;margin-bottom:20%;}
-.ulsecond {list-style-type: none;}
-.secondh {line-height: 150px;}
-.reading {   width: 560px;
-    height: fit-content;
-    border-radius: 12px;}
-=======
-.p1 {
-  color: #385159;
-  font-size: 20px;
-  line-height: 140%;
-  letter-spacing: -0.5px;
-  font-family: Inter;
-  display: block;
-  height: 84px;
-}
 .buttonlight {
-  display: block;
-  background: no-repeat linear-gradient(90deg, #ffe2d1, #fff5ef);
-  background-position-x: -400px;
-  transition: 200ms;
-  background-color: #fff5ef;
-}
-.hero {
-  width: 535px;
-
-  border-radius: 10px;
-  justify-content: right;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  min-height: 64px;
+  border: 2px #062630 solid;
+  border-radius: 8px;
+  margin: 0;
+  padding: 0;
+  color: #062630;
+  font-family: Martian Mono;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
   display: flex;
-  flex-direction: row;
-  justify-content: right;
+  align-items: center;
+  padding-inline: 24px;
+  letter-spacing: -1px;
+  line-height: 130%;
+  justify-content: center;
+  gap: 20px;
 }
-.ul1 {
+.avatar {
+  width: 110px;
+  height: 40px;
+  margin-top: 20px;
+}
+.ulstar {
+  display: flex;
   list-style-type: none;
 }
->>>>>>> 735977c44e0ad36fe2aaa0302bc39c0773c36b06
+.hero {
+  width: 536px;
+  border-radius: 10px;
+  margin-left: 30%;
+  margin-top: 15%;
+  gap: 80px;
+  margin-right: 0px;
+}
+.sectionsecond {
+  display: flex;
+  flex-direction: row;
+}
+.secondpage {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin: 50px;
+  text-align: left;
+  margin-left: 10%;
+  list-style-type: none;
+  font-size: 30px;
+  line-height: 30px;
+}
+.logo {
+  margin-top: -40px;
+  margin-left: 0px;
+  margin-bottom: 20%;
+}
+.ulsecond {
+  list-style-type: none;
+}
+.secondh {
+  line-height: 150px;
+}
+.reading {
+  width: 560px;
+  height: fit-content;
+  border-radius: 12px;
+}
